styles/common-template.css
/* ... */
.rounded_rect_tbl .ext_file { float: right; margin-right: 15px; }
.rounded_rect_tbl a { font-size: 14px; }
.label_td a, .text_editor_container a { position: relative; top: -1px; font-size: 12px; font-weight: bold; } /* for help [?] */
.rounded_rect_tbl #dashboard a { white-space: nowrap; }
.rounded_rect_tbl #siteResourceList a {color: &[SecondaryColorB_3];;}
.rounded_rect_tbl #siteResourceList #dashboard a, #siteResourceList #menu a {color: &[Alternative_A];;}

.listArrow { width: 25px; height: 20px; }

.panel_block .hide_icon { position: absolute; top: 5px; left: -35px; cursor: pointer; }
#menu_Options #hide_icon { position: relative; z-index: 2; top: 15px; left: -4px; cursor: pointer; }

#menu_Options #hide_icon { top: 15px; left: -4px; }
/* #pane2 - "plain" dialogs */
#pane2 .content { padding: 15px 10px; }

.frame {
  width: 100%; /* takes 100% of panel block width */
  height: 100%;
  overflow: hidden;
  overflow-x: hidden;
  overflow-y: hidden !important;
  overflow-y: visible;
  padding: 0;
  border: none;
}
/* show options without form */
.frame, #siteResourceList .options_panel, #siteResourceList .classifier_panel, #siteResourceList .calendar_panel, #pane2 .content, #siteResourceList .widget .frame, 
    #fts-sift .options_panel, #fts-sift .classifier_panel, #fts-sift .calendar_panel, #pane2 .content, #fts-sift .widget .frame,   
    .oneparamselection .options_panel, .oneparamselection .classifier_panel, .oneparamselection .calendar_panel, .mobile_dlg, .userLogin
  { 
  background-color: &[PrimaryColor_1];;
  background-image: url(../images/skin/iphone/pinstripes.png);
  background-image: -moz-repeating-linear-gradient(0deg, &[PrimaryColor_1]; 0px, &[PrimaryColor_4]; 4px);
  background-image: -webkit-gradient(linear, 0 0, 100% 100%, from(&[PrimaryColor_1];), to(&[PrimaryColor_4];));
  -webkit-background-size: 4px 1px;
  background-image: -o-repeating-linear-gradient(0deg, &[PrimaryColor_1]; 0px, &[PrimaryColor_4]; 4px);
  height: auto;
}

#siteResourceList .frame, #fts-sift .frame, .oneparamselection .frame { background: none; }

.tray {
  padding: 0;
  margin: 0;
  width: 500%; /* 5 x frame width -> allowas 5 frames; then each frame has width 20% */
  position: relative;
  float: left;
  left: 0;
}
.tray_slidesshow { width: auto; }

.form_panel, .options_panel, .classifier_panel, .calendar_panel { float: left; width: 20%; min-height: 1px;  }
.oneparamselection { box-shadow: none; -moz-box-shadow: none; -webkit-box-shadow: none; }
.oneparamselection .form_panel { height: 1px; overflow: hidden; visibility: hidden; }

/*#siteResourceList .form_panel, #fts-sift .panel_block {  min-height: 1px;  }*/


/** Touch UI buttons **/
.panel_block .toggle_btn { float: right; text-align: right; }
.toggle_btn  { height:32px; overflow:hidden; width: 72px; padding: 0px 3px; }
.toggle_btn div::selection, .toggle_btn div::-moz-selection { background: transparent; }
.toggle_btn .toggle_btn_tray { width:300px; cursor: pointer; margin-left: 0px; }
.toggle_btn .toggle_btn_tray div { float: left; }
.toggle_btn .left, .toggle_btn .right { height:22px; margin-top:5px; width: 50px; box-shadow: 0 0 4px rgba(0, 0, 0, 0.5); -moz-box-shadow:0 0 4px rgba(0, 0, 0, 0.5); -webkit-box-shadow:0 0 4px rgba(0, 0, 0, 0.5); }
.toggle_btn .left {
  border-radius:22px 0 0 22px;
  background-color: &[PrimaryColor_1];;
  margin-left: 0px;
}
.toggle_btn .right {
  visibility: hidden;
  border-radius:0 22px 22px 0;
  background: &[BodyBackgroundColor];;
  margin-left:-5px;
}

* html .toggle_btn .left, * html .toggle_btn .right, * html .toggle_btn .circle { border: solid 1px &[PrimaryColor_1];; }
* html .toggle_btn .left { border-right: none; }

.toggle_btn .circle {
  border-radius: 28px 28px 28px 28px;
  background-color: &[SecondaryColorA_5];;
  
  box-shadow: 0px 0px 15px &[ToolbarColor]; inset; /* for Opera - no gradient there */
  background-image: -moz-radial-gradient(&[SecondaryColorA_5];, &[ToolbarColor];);
  background-image: -webkit-gradient(radial, center center, 0, center center, 28.0, from(&[SecondaryColorA_5];), to(&[ToolbarColor];));
  
  #filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=&[PrimaryColor_4];,endColorstr=&[PrimaryColor_1];);
  -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=&[PrimaryColor_4];,endColorstr=&[PrimaryColor_1];)";
  
  width: 28px;
  height: 28px;
  margin-top:2px;
  margin-left: -5px;
  position:relative;
}

.toggle_btn .label { text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4); display:inline; font-size: 13px; font-weight:bold; line-height:21px; margin-left:16px; }

.toggle_btn .left .label { color: &[MenuLineColorA]; !important; }
.toggle_btn .right .label { color: &[Label]; !important; }

.toggle_btn .no { margin-left:-45px; }

.iphone_checkbox { border: none; margin: 0px 3px; width: 29px; height: 29px; background: url(../images/skin/iphone/checkbox.png); cursor: pointer; }
.checked { background-position: 100% 0%; } 


/*.toolbar_icons_set { width: 25; height: 40; background-image: url(../images/skin/iphone/toolbar_icons_set.png) }*/
.icon_btn, .icon_btn_symb { 
   width: 30px; color: #eee;  cursor: pointer; 
  /* font-family: Caslon; */
   font-size: 26px;
   font-weight: normal;
   text-shadow: 0 1px 1px rgba(0,0,0,0.25), 2px 0 1px rgba(0,0,0,0.25) !important;
 }
 .icon_btn img { width: 30px; height: 30px; }
.icon_btn_symb { -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0.8))); }
.dlg_cross { font-family: Geneva, Tahoma, Arial, Helvetica; font-weight: bold; }

.right { float: right; /*margin-right: 4px;*/ }

/** shadow **/
.shadow_right_top {
  width: 11px;
  height: 100%;
  background: url(../images/frame/png/right_top.png) no-repeat;
}
.shadow_right {
  width: 11px;
  height: 100%;
  background: url(../images/frame/png/right.png) repeat-y;
}
.shadow_bottom {
  height: 11px;
  width: 100%;
  float: left;
  background: url(../images/frame/png/bottom.png) no-repeat;
}
/* ... */

